# BoardCOM

./: CLAUDE.md  README.md
.github/workflows/: rust_ci.yml
app/: README.md
docs/driver/: display.md
firmware/: .gitignore  Cargo.toml  build.rs  sdkconfig.defaults
firmware/config/: default_config.json
firmware/src/: error.rs  lib.rs  main.rs
firmware/src/automations/: mod.rs
firmware/src/config/: mod.rs
firmware/src/drivers/: hw.rs  ili9341_display.rs  mod.rs  pulse_counter.rs  registry.rs  ssd1306_display.rs
firmware/src/drivers/display/: compositor.rs  generic.rs  mod.rs  widgets.rs
firmware/src/entities/: contract.rs  mod.rs  state.rs
firmware/wokwi/: diagram.json  scenario.yaml  wokwi.toml
